--- a/6-Nov/Task1.html
+++ b/6-Nov/Task1.html
@@ -5,8 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script  type="text/javascript" src="Task1.js"></script>
-    
-    <title>If Statment</title>
+    <script  type="text/javascript" src="Task2.js"></script>
+    <script  type="text/javascript" src="Task3.js"></script>
+    <script  type="text/javascript" src="Task4.js"></script>
+
+    <title>Switch Task</title>
 </head>
 <body>
     
