--- a/OptionalTasks/Task4.html
+++ b/OptionalTasks/Task4.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script  type="text/javascript" src="Task1.js"></script>
-    
-    <title>If Statment</title>
+    <script  type="text/javascript" src="Task4.js"></script>
+    <title>Document</title>
 </head>
 <body>
     
