Dom-Event-Tasks

--- a/8-Nov/Task1/Task1.html
+++ b/8-Nov/Task1/Task1.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script  type="text/javascript" src="Task4.js"></script>
-    <script  type="text/javascript" src="Task5.js"></script>
-   <title>Document</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="Task1.css" type="text/css">
 </head>
 <body>
-    
+    <div id="helloDiv"> 
+        Hello World !
+    </div>
+    <script  type="text/javascript" src="Task1.js"></script>
 </body>
 </html>
